--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Noah Glaser",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.1",
