--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "yup": "^1.2.0",
+    "yup-password": "^0.2.2"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.1"
